StudyCase1/enrollment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enrollments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enrollmentservice
  template:
    metadata:
      labels:
        app: enrollmentservice
    spec:
      containers:
      - name: enrollmentservice
        image: rizhy/enrollmentservice:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: enrollments-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: enrollmentservice
  ports:
  - name: enrollmentservice
    protocol: TCP
    port: 80
    targetPort: 80
